--- a/validador.html
+++ b/validador.html
@@ -14,14 +14,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
         integrity="sha512-IJEbgDEF7OeKJRa0MY2PApnyJHRIsgzCveek4ec8VWQ+7KG3ZSKVNYa5xP/Gh0hVP0Mwb+gBsk+GwR3JQGhQNg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/formulario/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/formulario/styles.css">
 </head>
 
 <body>
         <section class="formulario">
             <div class="formulario__container">
-                <img src="../img/status-2.png" alt="Etapa dois de três" class="formulario__etapas">
+                <img src="img/status-2.png" alt="Etapa dois de três" class="formulario__etapas">
                 <h2 class="formulario__titulo-texto">Reconhecimento facial</h2>
                 <p class="formulario__texto">Clique no quadro abaixo para capturarmos uma imagem sua!</p>
 
