--- a/validador.html
+++ b/validador.html
@@ -25,7 +25,7 @@
                 <h2 class="formulario__titulo-texto">Reconhecimento facial</h2>
                 <p class="formulario__texto">Clique no quadro abaixo para capturarmos uma imagem sua!</p>
 
-                <img src="../img/reconhecimento.png" alt="Rosto com olhos e um sorriso dentro de um enquadramento"
+                <img src="img/reconhecimento.png" alt="Rosto com olhos e um sorriso dentro de um enquadramento"
                     data-video-botao class="formulario__imagem">
 
                 <div class="formulario__camera" data-camera>
@@ -36,7 +36,7 @@
 
                 <div class="formulario__mensagem" data-mensagem>
                     <canvas width="320" height="240" data-video-canvas></canvas>
-                    <img src="../img/ícone check.png" alt="Ícone de validação" class="formulario__imagem">
+                    <img src="img/ícone check.png" alt="Ícone de validação" class="formulario__imagem">
                     <p>Prontinho, imagem capturada!</p>
 
                     <a href="login.investbr.shop" class="formulario__botao formulario__botao--ancora" data-enviar>Quero abrir minha
@@ -46,7 +46,7 @@
         </section>
 
     </main>
-    <script src="../js/camera.js"></script>
+    <script src="js/camera.js"></script>
 </body>
 
         </html>
